--- a/html/bnbledger.html
+++ b/html/bnbledger.html
@@ -21,10 +21,10 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-currencycheatsheet"></div>
+  <div class="subphoto subphoto-bnbledger"></div>
   <div class="whitecard view-slides clickable">
-    <h4>a research project for</h4>
-    <h5>the money curious</h5>
+    <h4>an analytical tool for</h4>
+    <h5>airbnb power hosts</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -34,113 +34,90 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/1.png">
+            <img class="responsive center" src="../images/bnbledger/logo.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>home</h4>
+            <h4>the project</h4>
             <hr>
-            <p>The logged-out home page has simple sign up mechanism (email and password only) at the top of the page. </p>
-            <p>Current bitcoin prices add value to a user before they sign up.</p>
+            <p>This project was a concept sketch of an analytics tool for serious Airbnb hosts. The first task was to  pull together a logo, which would give us a starting point for the design.</p>
+            <p>The logo uses a bar chart to create a house shape.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/10.png">
+            <img class="responsive" src="../images/bnbledger/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>post sign up</h4>
+            <h4>analytics product</h4>
             <hr>
-            <p>After signing up, the user is asked to connect their bitcoin accounts.</p>
+            <p>A long scrolling metrics page gives an overview of the revenue and occupancy of all properties managed by an Airbnb host.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/7.png">
+            <img class="responsive" src="../images/bnbledger/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>accounts</h4>
+            <h4>total revenue by property</h4>
             <hr>
-            <p>The connected accounts then populate the balance information.</p>
+            <p>The total revenue chart can show an individual property's proportion with one click. </p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/2.png">
+            <img class="responsive" src="../images/bnbledger/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>charts</h4>
+            <h4>multiple properties</h4>
             <hr>
-            <p>In charts, the user can see data visualizations of their portfolio value, gains and losses and tax information.</p>
+            <p>Multiple properties can be added to the chart.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/3.png">
+            <img class="responsive" src="../images/bnbledger/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>bitcoin</h4>
+            <h4>dropdown</h4>
             <hr>
-            <p>To see currency trading history, bitcoin prices and the user's break even price, the user drops down the bitcoin panel. </p>
+            <p>The metrics for an individual property can be accessed in the dropdown.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/4.png">
+            <img class="responsive" src="../images/bnbledger/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>spending charts</h4>
+            <h4>single property</h4>
             <hr>
-            <p>Pie charts show the user's spending habits and division of holdings within each company.</p>
+           <p>Details on a single property allow the user to drill into the data deeply.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/5.png">
+            <img class="responsive" src="../images/bnbledger/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>ledger</h4>
+            <h4>lander</h4>
             <hr>
-           <p>In the ledger, the user can see their transactions, fees and balances.</p>
-           <p>Transaction types are marked with color labels and users are able to write notes on each.</p>
+            <p>The landing page for the project features a blurred background image that becomes clear once a user inputs their email address.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/6.png">
+            <img class="responsive" src="../images/bnbledger/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>taxes</h4>
+            <h4>video graphics</h4>
             <hr>
-            <p>The tax area shows all taxable transactions and 3 methodology choices for tax reporting.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/8.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>emails</h4>
-            <hr>
-            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/9.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>emails</h4>
-            <hr>
-            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
+            <p>Custom drawings were made for the introduction video.</p>
           </div>
         </div>
 
@@ -155,12 +132,11 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>the money curious?</h4>
+        <h4>airbnb power hosts?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They’re people who pay attention to their money and are curious about how currencies work. They hear about terms like &lsquo;the gold standard&rsquo;, &lsquo;fiat currency&rsquo; and &lsquo;decentralized currency&rsquo; but don't quite understand what they mean or why they are written about often.
-      <p>They are people who are interested in bitcoin and the blockchain technology and need a quick impartial way to understand its implications.</p>
+      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
     </div>
   </div>
 </div>
@@ -169,19 +145,24 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Use the research from <a href="coinledger.html">Coin Ledger</a> to help everyone understand currency.</p>
+      <p class="lead">Design an Airbnb host analytics tool.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
-    <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
-      <h5>Site</h5>
-      <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/bnbledger-logo.png"></div>
+      <h5>Logo</h5>
+      <p>Starts visual design and branding</p>
     </div>
-    <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/8.png"></div>
-      <h5>Email</h5>
-      <p>Coordinating emails introduce users to features</p>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="../images/bnbledger/4.png"></div>
+      <h5>Site</h5>
+      <p>Allows hosts to analyze their properties' profit and loss</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="../images/bnbledger/7.png"></div>
+      <h5>Lander</h5>
+      <p>Tests user interest while site is created</p>
     </div>
   </div>
 </div>
@@ -190,8 +171,8 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>New design</h3>
-        <h4>solutions</h4>
+        <h3>What was</h3>
+        <h4>the solution?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
@@ -211,7 +192,7 @@
   <div class="row details-items match-height distribute">
     <div class="details-item col-sm-3">
       <h5>Project Type</h5>
-      <p>redesign</p>
+      <p>proof of concept</p>
     </div>
     <div class="details-item col-sm-3">
       <h5>Time frame</h5>
@@ -221,12 +202,13 @@
       <h5>Team</h5>
       <ul class="list-unstyled">
         <li>engineer</li>
+        <li>biz dev</li>
         <li>me</li>
       </ul>
     </div>
     <div class="details-item col-sm-3">
       <h5>Outcome</h5>
-      <p>live site</p>
+      <p>prototypes</p>
     </div>
   </div>
 </div>
