--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -37,7 +37,7 @@
             <img class="responsive" src="../images/creativelive/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>website : home</h4>
+            <h4>home</h4>
             <hr>
             <p>Designed to inspire creative learners, the home page featured simple navigation and large hero imagery.</p>
           </div>
@@ -48,7 +48,7 @@
             <img class="responsive" src="../images/creativelive/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>the &lsquo;watch now&rsquo; tab</h4>
+            <h4>&lsquo;watch now&rsquo;</h4>
             <hr>
             <p>Atop each page, a user could see classes that were free to watch at that moment by pulling down the &lsquo;watch now&rsquo; tab.</p>
 
@@ -107,11 +107,11 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>mobile app</h4>
             <hr>
-            <p>A simplified app allows learners to watch broadcasted classes and ones they've purchased on the go.</p>
+            <p>The app allows learners to watch free broadcasted classes and ones they've purchased on the go.</p>
           </div>
         </div>
 
-        <div>
+        <!--<div>
           <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="../images/creativelive/17.png">
           </div>
@@ -120,7 +120,7 @@
             <hr>
             <p>Clicking the hamburger icon slid over a simple navigation pane.</p>
           </div>
-        </div>
+        </div>-->
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
@@ -244,7 +244,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Users of the old design gave the feedback that they had trouble understanding what the company could do for them. They did not know that there was a live class happening right at that time that they could watch for free. They also had trouble comprehending the videos on the class page as it involved a lot of scrolling. Catalog pages had a very complex filtering system that required a lot of reading. Live broadcast pages looked very similar to class pages so there was confusion around what was live and what was paid. </p>
+      <p>Users of the old site gave the feedback that they had trouble understanding what the company could do for them. They did not know that there was a live class happening right at that time that they could watch for free. They also had trouble comprehending the videos on the class page.</p>
     </div>
   </div>
 </div>
@@ -258,9 +258,27 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that would describe what Creative Live did, allowing for less text to be used. Instead of having one corporate color for links, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
-      <p>On catalog pages I simplified the filtering mechanism. On calendar pages we ran tests to see how the calendar was used and found that a list view was optimal. To address the confusion between what was live and what was paid, I devised a system of dark gray background colors for live classes and light gray colors for classes requiring payment. For the class pages, I kept the videos above the fold for ease of browsing.</p>
-      <p>Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a smooth handwriting feel.</p>
+      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a smooth handwriting feel.</p>
+      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/creativelive/2.png">
+
+      <p>Instead of having one corporate color, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
+      <img class="responsive" style="margin-bottom:60px;" src="../images/creativelive/4.png">
+
+      <p>On catalog pages I created a simple filtering mechanism.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/8.png">
+
+      <p>For the calendar, we ran tests to see what users needed and found that a list layout was optimal.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/15.png">
+
+      <p>For the class pages, I kept the videos above the fold for ease of browsing.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/7.png">
+
+      <p>The classroom was designed to be an immersive experience that allowed users to easily focus and interact with the instructor.</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/24.png">
+
+      <p>The mobile app coordinated with the site and was optimized for a user watching classes on the go</p>
+      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/16.png">
+
     </div>
   </div>
 </div>
@@ -279,7 +297,7 @@
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -287,8 +305,8 @@
   </div>
   <div class="row details-items match-height distribute">
     <div class="details-item col-sm-3">
-      <h5>Project Type</h5>
-      <p>redesign</p>
+      <h5>My role</h5>
+      <p>ux/visual designer</p>
     </div>
     <div class="details-item col-sm-3">
       <h5>Time frame</h5>
@@ -312,7 +330,7 @@
       <p>live site</p>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
