--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -61,7 +61,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>dashboard</h4>
             <hr>
-            <p>Once logged in, publishers are given an overview of their metrics, their favorite's metrics and messages about new useful features in their dashboard.</p>
+            <p>Once logged in, publishers are given an overview of their metrics, their favorites' metrics and messages about new useful features in their dashboard.</p>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>measure</h4>
             <hr>
-            <p>Deep metrics on their websites are provided in the measure section. A publisher can export each 'metric card' to their recurring reports to ad networks.</p>
+            <p>Deep metrics on their websites are provided in the measure section. A publisher can export each 'metric card' and use them in their reports to ad networks.</p>
           </div>
         </div>
 
@@ -105,7 +105,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>analytics</h4>
             <hr>
-            <p>I designed data visualizations to help users understand key concepts like indexing. In this example, a user could use the metrics as is...</p>
+            <p>Data visualizations were designed to help users understand key concepts like indexing. In this example, a user could view the metrics as is...</p>
           </div>
         </div>
 
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Web publishers are blogs, news and information websites that make their revenue from running ads. Their day to day focus is on providing fresh engaging content and increasing their readership. </p>
+      <p>Web publishers are blogs, news and product websites that make their revenue from running ads. Their day to day focus is on providing fresh engaging content and increasing their readership. </p>
       <p>Because their money is made from ads, they must provide accurate, impartial metrics of their readership to ad serving companies (ad networks) and prove they are a fit. </p>
     </div>
   </div>
@@ -150,7 +150,7 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Quantcast is a company that provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts code onto their web pages that allows visits to be tracked. They are then provided with analytic reports which are used as proof in reports to ad networks.</p>
-      <p>I worked at Quantcast for nearly two years, getting to know redesigning their analytic product and creating data visualizations.</p>
+      <p>I worked at Quantcast for nearly two years, getting to know web publishers and redesigning Quantcast's analytic product to best suit their needs.</p>
     </div>
   </div>
 </div>
